Fix spacing issues when scrollbars are visible

--- a/src/views/stylesheets/charts/bar.styl
+++ b/src/views/stylesheets/charts/bar.styl
@@ -29,11 +29,12 @@
 
     thead, tbody
       display block
+      overflow-y scroll
+      overflow-x hidden
 
     tbody
       min-height 200px
       max-height 400px
-      overflow scroll
 
     th, td
       white-space nowrap
