--- a/src/views/stylesheets/result.styl
+++ b/src/views/stylesheets/result.styl
@@ -69,5 +69,5 @@
   .loader
     loader()
     position absolute
-    top 30%
+    top 25%
     left 50%
